--- a/src/app/expense/expense.component.html
+++ b/src/app/expense/expense.component.html
@@ -1,18 +1,38 @@
 <mat-progress-bar mode="indeterminate" *ngIf="request" class="barLoader"></mat-progress-bar>
 
 <div class="relative">
-    <h1 class="centerText">GASTOS</h1>
+    <h1 class="centerText">GASTOS</h1>   
 
-    <a *ngIf="storage.getUserType() >= 6" class="linkExcel" href="{{ storage.getUrl() + 'excel/expenses' + storage.getTokenUrl() }}
-    &from={{ search.from }}&to={{ search.to }}&id={{ search.id }}">
-        <p>Exportar a Excel</p>
-        <img src="http://icons.iconarchive.com/icons/graphicloads/filetype/256/excel-xls-icon.png">
-    </a>
+    <form class="flex" *ngIf="auth.user_type_id >= 6">
+        <div class="l4">
+            <div class="icon-left">
+                <input (change)="get()" type="date" [(ngModel)]="search.from" name="from">
+                <label class="icon"><mat-icon>date_range</mat-icon></label>
+            </div>
+        </div>
 
+        <div class="l4" >
+            <div class="icon-left">
+                <input (change)="get()" type="date" [(ngModel)]="search.to" name="to">
+                <label class="icon"><mat-icon>date_range</mat-icon></label>
+            </div>
+        </div>
+    </form>
 
-    <form class="form">
-        <input (change)="get()" type="date" [(ngModel)]="search.from" name="from" id="search"><label><mat-icon>date_range</mat-icon></label>
-        <input (change)="get()" type="date" [(ngModel)]="search.to" name="to" id="search"><label><mat-icon>date_range</mat-icon></label>
+    <form class="flex" *ngIf="auth.user_type_id < 6">
+        <div class="l4">
+            <div class="icon-left">
+                <input type="date" [(ngModel)]="search.from" name="from" disabled>
+                <label class="icon"><mat-icon>date_range</mat-icon></label>
+            </div>
+        </div>
+
+        <div class="l4" >
+            <div class="icon-left">
+                <input type="date" [(ngModel)]="search.to" name="to" disabled>
+                <label class="icon"><mat-icon>date_range</mat-icon></label>
+            </div>
+        </div>
     </form>
 
 
@@ -23,7 +43,7 @@
 
             <thead>
                 <tr>
-                    <th class="left">ID</th>
+                    <!-- <th class="left">ID</th> -->
                     <th>Monto</th>
                     <th>Nombre</th>
                     <th>Fecha</th>
@@ -33,8 +53,8 @@
             </thead>
 
             <tbody *ngIf="storage.getUserType() >= 6">
-                <tr *ngFor="let ex of expenses" [routerLink]="['/expenses/edit', ex.$id]" (click)="updateStartObservable()">
-                    <td class="left">{{ ex.$id }}</td>
+                <tr *ngFor="let ex of expenses" [routerLink]="['/expenses/edit', ex.$id]" >
+                    <!-- <td class="left">{{ ex.$id }}</td> -->
                     <td>$ {{ ex.$amount }}</td>
                     <td>{{ ex.$name }}</td>
                     <td>{{ ex.$created_at | date: format}}</td>
@@ -44,7 +64,7 @@
 
             <tbody *ngIf="storage.getUserType() == 3">
                 <tr *ngFor="let ex of expenses">
-                    <td class="left">{{ ex.$id }}</td>
+                    <!-- <td class="left">{{ ex.$id }}</td> -->
                     <td>$ {{ ex.$amount }}</td>
                     <td>{{ ex.$name }}</td>
                     <td>{{ ex.$created_at | date: format}}</td>
@@ -61,10 +81,26 @@
 
 </div>
 
-<a (click)="redirectCreate()">
-    <div class="botonFloat">
-        <a class="botonA" matTooltip="Crear recibo"><i class="material-icons">add</i></a>
+<div class="floatOptions">
+
+        <div class="moreOptions">
+    
+            <a *ngIf="storage.getUserType() >= 6" class="linkExcel" href="{{ storage.getUrl() + 'excel/expenses' + storage.getTokenUrl() }}
+                    &from={{ search.from }}&to={{ search.to }}&id={{ search.id }}">
+                <button class="green" matTooltip="Descargar Gastos" matTooltipPosition="left" mat-fab id="cancelButton">
+                    <mat-icon >archive</mat-icon>
+                </button>
+            </a>                
+    
+            <button class="blue" [routerLink]="['./create']" matTooltip="Crear Gasto" matTooltipPosition="left" mat-fab>
+                <mat-icon >create</mat-icon>
+            </button>
+        </div>
+    
+        <button  matTooltipPosition="left" mat-fab color="pri" class="floatOptionPrincipal">
+            <mat-icon >settings</mat-icon>
+        </button>
+    
     </div>
-</a>
 
 <router-outlet></router-outlet>
