--- a/src/app/records/records.component.html
+++ b/src/app/records/records.component.html
@@ -46,7 +46,10 @@
 
                 <td class="left">{{ record.user.name }}</td>
                 <td>{{ record.date }}</td>
-                <td>{{ record.checkIn }} - {{ record.checkOut }}</td>
+                <td>{{ record.checkIn | time }} 
+                    <span *ngIf="record.checkOut != null">- {{ record.checkOut | time }} </span>
+                    <span *ngIf="record.checkOut == null"> - Sin Salida</span>
+                </td>
             </tr>
         </tbody>
     </table>
@@ -58,19 +61,19 @@
 
     <div class="moreOptions">
 
-        <a target="_blank" >
-            <button matTooltip="Exportar Asistencias" [routerLink]="['./exportar']" matTooltipPosition="left" mat-fab id="cancelButton">
-                <mat-icon >archive</mat-icon>
-            </button>
-        </a>
-
-        <button  matTooltip="Nuevo Producto" matTooltipPosition="left" mat-fab>
-            <mat-icon >create</mat-icon>
+        
+        <button class="green" matTooltip="Exportar Asistencias" [routerLink]="['./exportar']" matTooltipPosition="left" mat-fab id="cancelButton">
+            <mat-icon >file_download</mat-icon>
+        </button>
+        
+        <button class="red darken-4"  matTooltip="Eliminar Asistencias" [routerLink]="['./delete']" matTooltipPosition="left" mat-fab>
+            <mat-icon >delete</mat-icon>
         </button>
 
-        <button  matTooltip="Nuevo Producto" matTooltipPosition="left" mat-fab>
+        <!-- <button  matTooltip="Nuevo Producto" matTooltipPosition="left" mat-fab>
+            
             <mat-icon >create</mat-icon>
-        </button>
+        </button> -->
 
     </div>
 
