--- a/src/app/user/create-user/create-schedule/create-schedule.component.html
+++ b/src/app/user/create-user/create-schedule/create-schedule.component.html
@@ -1,7 +1,7 @@
 <div class="background" [@background]="backgroundState"></div>
 <div id="createCard" [@principal]="cardState">
 
-    <div id="cerrarBtn" (click)="close(validateSchedules())" [routerLink]="['../']"> Cerrar <i class="material-icons">close</i></div>
+    <div id="cerrarBtn" (click)="close()" [routerLink]="['../']"> Cerrar <i class="material-icons">close</i></div>
 
     <div class="form">
         <h1 align="center">Asignar Horarios</h1>
@@ -50,7 +50,7 @@
                             <button type="button" class="red" (click)="deleteSchedule(x)">Eliminar</button>
                             <button type="button" class="blue" (click)="editSchedule(x)">Editar</button>
                             <button type="button" class="orange" (click)="copySchedule(x)">Copiar</button>
-                            <button type="button" class="black" (click)="pasteSchedule(x)" *ngIf="scheduleCopied">Pegar</button>
+                            <button type="button" class="black white-text" (click)="pasteSchedule(x)" *ngIf="scheduleCopied">Pegar</button>
                         </th>
                         
                     </tr>
